unpackaged/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>this is test desc</description>
        <label>City</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This is Country description</description>
        <label>Country</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infoEx_Id__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>infoEx_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Region_View</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>Region_View</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>For_Non_Region_Users__c</fullName>
        <label>For Non Region Users</label>
    </sharingReasons>
</CustomObject>